# team-9-backend-stammdaten-studieneinheiten

./: .editorconfig  .gitignore  README.md  checkstyle.xml  makefile  pom.xml  pyproject.toml
.github/workflows/: checkstyle.yml
app/: main.py
app/api/: __init__.py  course_templates.py  courses.py  health.py  me.py
app/core/: db.py  security.py
app/models/: course.py  course_template.py
app/repositories/: base.py  course_repository.py  course_template_repository.py
app/schemas/: course.py  course_template.py
app/services/: course_service.py  course_template_service.py
data/: mydb.mv.db  mydb.trace.db
src/main/java/com/ase/userservice/: Application.java
src/main/java/com/ase/userservice/controllers/: RootController.java
src/test/java/com/ase/userservice/: ApplicationTests.java
tests/: conftest.py  test_course_templates.py  test_courses.py
